--- a/index.html
+++ b/index.html
@@ -1,286 +1,29 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="es">
 <head>
-<meta charset="utf-8" />
-<meta name="viewport" content="width=device-width,initial-scale=1" />
-<title>Invitación - Tahily 1er Añito</title>
-<meta name="description" content="Invitación al primer año de Tahily.">
-<style>
-  :root{
-    --bg1:#bfe9ff;
-    --bg2:#fbe8f0;
-    --accent:#ff9aa2;
-    --text:#123;
-    --glass: rgba(255,255,255,0.6);
-  }
-
-  html,body{height:100%;margin:0;font-family: "Inter", system-ui, -apple-system, "Segoe UI", Roboto, "Helvetica Neue", Arial;}
-  body{
-    background: radial-gradient(1200px 600px at 10% 10%, rgba(255,255,255,0.35), transparent),
-                linear-gradient(180deg, var(--bg1) 0%, #a8e0d2 45%, var(--bg2) 100%);
-    display:flex;align-items:center;justify-content:center;padding:20px;
-  }
-
-  .card{
-    width:100%;max-width:920px;background:linear-gradient(180deg, rgba(255,255,255,0.7), rgba(255,255,255,0.5));
-    border-radius:20px;box-shadow:0 10px 30px rgba(20,40,60,0.12);overflow:hidden;backdrop-filter: blur(6px);
-    display:grid;grid-template-columns: 1fr 420px;min-height:540px;
-  }
-
-  /* responsive */
-  @media (max-width:900px){
-    .card{grid-template-columns: 1fr;min-height:760px;}
-    .side{order:2}
-  }
-
-  /* left: hero */
-  .hero{
-    position:relative;padding:36px 32px;display:flex;flex-direction:column;justify-content:center;
-  }
-
-  .title{
-    font-size:34px;color:var(--text);margin:0 0 6px 0;font-weight:700;
-    letter-spacing:0.2px;
-  }
-  .subtitle{color: #2b556b; margin:0 0 18px 0; font-size:16px;}
-  .box{
-    background: linear-gradient(180deg, rgba(255,255,255,0.7), rgba(255,255,255,0.5));
-    padding:18px;border-radius:12px;box-shadow: 0 6px 18px rgba(15,40,60,0.06);margin-top:10px;
-  }
-  .row{display:flex;gap:12px;align-items:center;margin:6px 0;}
-  .icon{
-    width:44px;height:44px;border-radius:10px;background:var(--glass);display:flex;align-items:center;justify-content:center;font-size:20px;color:var(--text);
-    box-shadow: inset 0 -4px 8px rgba(255,255,255,0.2);
-  }
-  .info{font-size:15px;color:#08303b}
-  .info b{display:block;font-weight:700;color:#0d3b48}
-
-  .cta{display:flex;gap:12px;margin-top:18px;flex-wrap:wrap;}
-  .btn{
-    background:linear-gradient(180deg,var(--accent),#ff6b8a);border:none;color:white;padding:10px 16px;border-radius:12px;font-weight:700;
-    cursor:pointer;text-decoration:none;display:inline-flex;align-items:center;gap:10px;box-shadow:0 6px 18px rgba(255,120,140,0.18)
-  }
-  .btn.ghost{background:transparent;color:var(--text);border:1px solid rgba(10,20,30,0.06)}
-  .small{font-size:13px;padding:8px 12px;border-radius:10px}
-
-  /* right: illustration area */
-  .side{
-    position:relative;padding:18px;display:flex;align-items:center;justify-content:center;background:
-      radial-gradient(circle at 10% 20%, rgba(255,255,255,0.06), transparent 10%),
-      linear-gradient(180deg, rgba(255,255,255,0.02), rgba(255,255,255,0.02));
-  }
-
-  .ocean{
-    width:100%;height:100%;max-height:520px;border-radius:14px;position:relative;overflow:hidden;
-    display:flex;align-items:center;justify-content:center;
-    background:
-      radial-gradient(circle at 30% 10%, rgba(255,255,255,0.08), transparent 6%),
-      linear-gradient(180deg,#a8e0ff 0%, #7ad6d6 40%, #a7e7e1 100%);
-  }
-
-  /* water texture (soft brushes) */
-  .ocean::after{
-    content:"";position:absolute;inset:0;pointer-events:none;
-    background-image:
-      radial-gradient(1200px 300px at 60% 0%, rgba(255,255,255,0.06), transparent),
-      radial-gradient(800px 200px at 10% 100%, rgba(255,255,255,0.03), transparent);
-    mix-blend-mode: overlay;
-  }
-
-  /* bubbles */
-  .bubble{
-    position:absolute;border-radius:50%;background:rgba(255,255,255,0.35);filter: blur(4px);opacity:0.9;
-    animation: bob 6s ease-in-out infinite;
-  }
-  .b1{left:12%;top:48%;width:22px;height:22px;animation-duration:5s}
-  .b2{left:72%;top:30%;width:30px;height:30px;animation-duration:7s}
-  .b3{left:40%;top:12%;width:18px;height:18px;animation-duration:6.6s}
-  @keyframes bob{0%{transform:translateY(0)}50%{transform:translateY(-10px)}100%{transform:translateY(0)}}
-
-  /* fish group */
-  .fish{
-    position:absolute;width:140px;height:120px;transform-origin:center;filter:drop-shadow(0 6px 10px rgba(10,30,50,0.12));
-    animation: swim 8s linear infinite;
-  }
-  .fish.f1{left: -10%; top: 20%; animation-duration:10s}
-  .fish.f2{left: -15%; top: 55%; animation-duration:12s;animation-delay:1.2s}
-  .fish.f3{left: -8%; top: 80%; animation-duration:9.2s;animation-delay:0.6s}
-  @keyframes swim{
-    0%{transform: translateX(-20vw) scaleX(1)}
-    50%{transform: translateX(110vw) scaleX(1)}
-    100%{transform: translateX(240vw) scaleX(1)}
-  }
-
-  /* shy wave overlay */
-  .wave{
-    position:absolute;left:0;right:0;bottom:0;height:140px;background:
-      radial-gradient(600px 120px at 10% 60%, rgba(255,255,255,0.05), transparent 10%),
-      linear-gradient(180deg, rgba(255,255,255,0.04), rgba(255,255,255,0.02));
-    transform: translateY(6px);
-  }
-
-  /* text bubble for name */
-  .badge{
-    position:absolute;left:18px;top:18px;background:linear-gradient(180deg,rgba(255,255,255,0.85),rgba(255,255,255,0.6));
-    padding:8px 12px;border-radius:12px;font-weight:700;color:#0b3b46;box-shadow:0 6px 18px rgba(0,0,0,0.06);
-    font-size:13px;
-  }
-
-  /* audio control */
-  .audio-controls{display:flex;gap:10px;align-items:center;margin-top:12px}
-  .playbtn{background:#fff;border-radius:999px;padding:10px;border:1px solid rgba(10,20,30,0.06);cursor:pointer}
-  .playbtn svg{width:18px;height:18px;display:block}
-
-  footer{margin-top:auto;padding:18px 0 6px;color:#075; font-size:13px}
-
-  /* small helper */
-  .muted{opacity:0.7;font-size:13px}
-</style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
+<title>Invitación - Tahily</title>
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class="card" role="main">
-    <div class="hero" aria-label="Detalles de la invitación">
-      <h1 class="title">Tahily cumple 1 añito 🎉</h1>
-      <p class="subtitle">Te invitamos a celebrar el primer año de nuestra bebé con una tarde marinera y mucha ternura.</p>
+<audio id="music" src="songta.m4a"></audio>
 
-      <div class="box" role="region" aria-label="Información">
-        <div class="row"><div class="icon">🎂</div><div class="info"><b>Primer añito</b><span>Tahily</span></div></div>
-        <div class="row"><div class="icon">📅</div><div class="info"><b>9 de Diciembre</b><span>Horario: 17:30 hs a 20:00 hs</span></div></div>
-        <div class="row"><div class="icon">📍</div><div class="info"><b>Manuel Videla 65</b><span>Rodeo de la Cruz</span></div></div>
+<div class="container">
+    <h1>Primer Añito de Tahily</h1>
+    <p class="date">9 de Diciembre — 17:30 a 20:00 hs</p>
+    <p class="place">Manuel Videla 65, Rodeo de la Cruz</p>
 
-        <div class="cta">
-          <!-- Google Maps link -->
-          <a class="btn" id="mapsBtn" href="https://www.google.com/maps/search/?api=1&query=Manuel+Videla+65+Rodeo+de+la+Cruz" target="_blank" rel="noopener">Cómo llegar</a>
-
-          <!-- WhatsApp -->
-          <a class="btn ghost" id="waBtn" href="https://wa.me/542612519528?text=Hola%20%F0%9F%8E%89%20Quiero%20confirmar%20la%20asistencia%20al%20cumplea%C3%B1os%20de%20Tahily" target="_blank" rel="noopener">Confirmar por WhatsApp</a>
-
-          <!-- audio play -->
-          <div style="margin-left:auto" class="audio-controls">
-            <button class="playbtn" id="playToggle" aria-pressed="false" title="Reproducir música">
-              <svg viewBox="0 0 24 24" fill="none" stroke="#08303b" stroke-width="1.4" stroke-linecap="round" stroke-linejoin="round"><polygon points="5 3 19 12 5 21 5 3"></polygon></svg>
-            </button>
-            <div class="muted">Música: tema estilo Ponyo</div>
-          </div>
-        </div>
-
-        <footer>
-          <div style="margin-top:8px">Traé tu mejor sonrisa :)</div>
-        </footer>
-      </div>
+    <div class="buttons">
+        <a class="btn" href="https://maps.app.goo.gl/" target="_blank">Cómo llegar</a>
+        <a class="btn" href="https://wa.me/542612519528" target="_blank">Confirmar asistencia</a>
+        <button class="btn" onclick="document.getElementById('music').play()">Reproducir música</button>
     </div>
+</div>
 
-    <aside class="side" aria-hidden="false">
-      <div class="ocean" role="img" aria-label="Fondo con peces">
-        <div class="badge">¡Tahily 1 año!</div>
+<div class="fish fish1"></div>
+<div class="fish fish2"></div>
+<div class="fish fish3"></div>
 
-        <!-- bubbles -->
-        <div class="bubble b1"></div>
-        <div class="bubble b2"></div>
-        <div class="bubble b3"></div>
-
-        <!-- fishes: SVGs creados aquí (originales y no copian el personaje) -->
-        <svg class="fish f1" viewBox="0 0 200 150" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
-          <defs>
-            <linearGradient id="g1" x1="0" x2="1">
-              <stop offset="0" stop-color="#ffecd2"/>
-              <stop offset="1" stop-color="#ff9aa2"/>
-            </linearGradient>
-            <linearGradient id="gA" x1="0" x2="1">
-              <stop offset="0" stop-color="#ffd2a6"/>
-              <stop offset="1" stop-color="#ff7b9c"/>
-            </linearGradient>
-          </defs>
-          <g transform="translate(0,10)">
-            <ellipse cx="90" cy="60" rx="62" ry="36" fill="url(#gA)" />
-            <path d="M28 60 q25 -28 62 -28 q30 0 58 22 q-8 12 -28 20 q-40 7 -92 6z" fill="rgba(255,255,255,0.15)"/>
-            <!-- eye -->
-            <circle cx="106" cy="48" r="8" fill="#fff"/>
-            <circle cx="108" cy="50" r="4" fill="#1c3b48"/>
-            <!-- playful fin -->
-            <path d="M20 55 q-10 10 6 24 q6 -22 14 -26 q-9 -6 -26 2z" fill="#ffd7d0" opacity="0.9"/>
-            <!-- tail -->
-            <path d="M152 54 q30 -20 40 8 q-22 18 -40 18 z" fill="#ffb3b3" opacity="0.95"/>
-            <!-- accents -->
-            <g opacity="0.9" transform="translate(0,0)" fill="#fff">
-              <ellipse cx="82" cy="42" rx="6" ry="3" />
-              <ellipse cx="96" cy="36" rx="10" ry="4" />
-            </g>
-          </g>
-        </svg>
-
-        <svg class="fish f2" viewBox="0 0 200 150" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
-          <defs>
-            <linearGradient id="g2" x1="0" x2="1">
-              <stop offset="0" stop-color="#b7e7ff"/>
-              <stop offset="1" stop-color="#8be3d1"/>
-            </linearGradient>
-          </defs>
-          <g transform="translate(0,0)">
-            <ellipse cx="90" cy="70" rx="56" ry="34" fill="url(#g2)" />
-            <path d="M30 70 q24 -26 62 -26 q28 0 56 20 q-10 14 -36 22 q-36 6 -82 4z" fill="rgba(255,255,255,0.14)"/>
-            <circle cx="108" cy="54" r="7" fill="#fff"/>
-            <circle cx="110" cy="56" r="3.5" fill="#06424b"/>
-            <path d="M18 70 q-8 16 6 22 q8 -18 18 -24 q-12 -4 -30 2z" fill="#d0f2ff"/>
-            <path d="M150 60 q20 -14 36 6 q-18 10 -36 10z" fill="#78e3d5"/>
-          </g>
-        </svg>
-
-        <svg class="fish f3" viewBox="0 0 200 150" xmlns="http://www.w3.org/2000/svg" aria-hidden="true">
-          <defs>
-            <linearGradient id="g3" x1="0" x2="1">
-              <stop offset="0" stop-color="#ffe8a6"/>
-              <stop offset="1" stop-color="#ffd7a6"/>
-            </linearGradient>
-          </defs>
-          <g transform="translate(0,8)">
-            <ellipse cx="100" cy="60" rx="50" ry="32" fill="#ffd6e0" />
-            <circle cx="118" cy="46" r="7" fill="#fff"/>
-            <circle cx="120" cy="48" r="3.5" fill="#1b4450"/>
-            <path d="M22 62 q20 -22 50 -22 q30 0 44 18 q-9 12 -28 18 q-36 8 -66 -14z" fill="rgba(255,255,255,0.12)"/>
-            <path d="M150 50 q18 -12 30 4 q-18 8 -30 10z" fill="#ffd2c6"/>
-          </g>
-        </svg>
-
-        <div class="wave" aria-hidden="true"></div>
-      </div>
-    </aside>
-  </div>
-
-  <!-- hidden audio element (file must be in same folder) -->
-  <audio id="bgAudio" src="songta.m4a" preload="metadata" loop></audio>
-
-<script>
-  // Play / pause control
-  const audio = document.getElementById('bgAudio');
-  const btn = document.getElementById('playToggle');
-  let playing = false;
-
-  btn.addEventListener('click', ()=>{
-    if(!playing){
-      audio.play().catch(()=>{ /* some browsers block autoplay until user gesture */ });
-      btn.setAttribute('aria-pressed','true');
-      btn.innerHTML = '<svg viewBox="0 0 24 24" fill="none" stroke="#08303b" stroke-width="1.4" stroke-linecap="round" stroke-linejoin="round"><rect x="6" y="4" width="4" height="16"></rect><rect x="14" y="4" width="4" height="16"></rect></svg>';
-    } else {
-      audio.pause();
-      btn.setAttribute('aria-pressed','false');
-      btn.innerHTML = '<svg viewBox="0 0 24 24" fill="none" stroke="#08303b" stroke-width="1.4" stroke-linecap="round" stroke-linejoin="round"><polygon points="5 3 19 12 5 21 5 3"></polygon></svg>';
-    }
-    playing = !playing;
-  });
-
-  // small: enhance fish movement with slight rotation
-  const fishEls = document.querySelectorAll('.fish');
-  fishEls.forEach((el,i)=>{
-    el.style.animationTimingFunction = i%2 ? 'cubic-bezier(.25,.6,.35,1)' : 'linear';
-    el.style.transformOrigin = 'center';
-  });
-
-  // accessibility: allow space to toggle audio when focused
-  btn.addEventListener('keydown', (e)=>{
-    if(e.code === 'Space' || e.code==='Enter'){ e.preventDefault(); btn.click(); }
-  });
-
-</script>
 </body>
 </html>
