--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <p class="place">Manuel Videla 65, Rodeo de la Cruz</p>
 
     <div class="buttons">
-        <a class="btn" href="https://maps.app.goo.gl/" target="_blank">Cómo llegar</a>
+        <a class="btn" href="https://maps.app.goo.gl/r6R3PtshPXQuKHnC7" target="_blank">Cómo llegar</a>
         <a class="btn" href="https://wa.me/542612519528" target="_blank">Confirmar asistencia</a>
         <button class="btn" onclick="document.getElementById('music').play()">Reproducir música</button>
     </div>
