--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       inset: 0;
 
       /* 🔵 AQUÍ CAMBIAS LA IMAGEN DE FONDO PRINCIPAL */
-      background-image: url('TU-IMAGEN-AQUI.jpg');
+      background-image: url('backgroundp.jpg');
 
       background-size: cover;
       background-position: center;
@@ -199,16 +199,26 @@
     <h2 style="font-family:'Fredoka One'; font-size:2rem;">Tahily a lo largo del año</h2>
 
     <div class="gallery-track">
-      <img src="FOTO1.jpg" alt="Tahily 1"><!-- Cambiar -->
-      <img src="FOTO2.jpg" alt="Tahily 2"><!-- Cambiar -->
-      <img src="FOTO3.jpg" alt="Tahily 3"><!-- Cambiar -->
-      <img src="FOTO4.jpg" alt="Tahily 4"><!-- Cambiar -->
-      <img src="FOTO5.jpg" alt="Tahily 5"><!-- Cambiar -->
-      <img src="FOTO6.jpg" alt="Tahily 6"><!-- Cambiar -->
-      <img src="FOTO7.jpg" alt="Tahily 7"><!-- Cambiar -->
-      <img src="FOTO8.jpg" alt="Tahily 8"><!-- Cambiar -->
-      <img src="FOTO9.jpg" alt="Tahily 9"><!-- Cambiar -->
-      <img src="FOTO10.jpg" alt="Tahily 10"><!-- Cambiar -->
+      <img src="FOTO1.jpeg" alt="Tahily 1"><!-- Cambiar -->
+      <img src="FOTO2.jpeg" alt="Tahily 2"><!-- Cambiar -->
+      <img src="FOTO3.jpeg" alt="Tahily 3"><!-- Cambiar -->
+      <img src="FOTO4.jpeg" alt="Tahily 4"><!-- Cambiar -->
+      <img src="FOTO5.jpeg" alt="Tahily 5"><!-- Cambiar -->
+      <img src="FOTO6.jpeg" alt="Tahily 6"><!-- Cambiar -->
+      <img src="FOTO7.jpeg" alt="Tahily 7"><!-- Cambiar -->
+      <img src="FOTO8.jpeg" alt="Tahily 8"><!-- Cambiar -->
+      <img src="FOTO9.jpeg" alt="Tahily 9"><!-- Cambiar -->
+      <img src="FOTO10.jpeg" alt="Tahily 10">
+      <img src="FOTO11.jpeg" alt="Tahily 11">
+      <img src="FOTO12.jpeg" alt="Tahily 12">
+      <img src="FOTO13.jpeg" alt="Tahily 13">
+      <img src="FOTO14.jpeg" alt="Tahily 14">
+      <img src="FOTO15.jpeg" alt="Tahily 15">
+      <img src="FOTO16.jpeg" alt="Tahily 16">
+      <img src="FOTO17.jpeg" alt="Tahily 17">
+      <img src="FOTO18.jpeg" alt="Tahily 18">
+      <img src="FOTO19.jpeg" alt="Tahily 19">
+      <img src="FOTO20.jpeg" alt="Tahily 20"><!-- Cambiar -->
     </div>
   </section>
 
