--- a/index.html
+++ b/index.html
@@ -1,284 +1,143 @@
-<!-- Archivo index.html actualizado con comentarios -->
 <!DOCTYPE html>
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Primer Año de Tahily</title>
-
-  <!-- FUENTES -->
   <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&family=Quicksand:wght@400;600&display=swap" rel="stylesheet">
-
   <style>
-    body {
-      margin: 0;
-      /* 🔵 AQUÍ PUEDES CAMBIAR EL DEGRADADO SI QUIERES */
-      background: linear-gradient(120deg, #8fd3ff, #5ebdff, #9fe0ff);
-      background-size: 400% 400%;
-      animation: marFluido 16s ease infinite;
-      font-family: 'Quicksand', sans-serif;
-      overflow-x: hidden;
+    body{
+      margin:0;
+      font-family:'Quicksand',sans-serif;
+      background:linear-gradient(120deg,#8fd3ff,#5ebdff,#9fe0ff);
+      background-size:400% 400%;
+      animation:mar 18s infinite;
+      overflow-x:hidden;
     }
-
-    @keyframes marFluido {
-      0% { background-position: 0% 50%; }
-      50% { background-position: 100% 50%; }
-      100% { background-position: 0% 50%; }
-    }
-
-    .hero {
-      text-align: center;
-      padding: 40px 20px;
-      color: white;
-      position: relative;
-      border-radius: 25px;
-      border: 8px solid rgba(255,255,255,0.8);
-    }
-
-    .hero::before {
-      content: "";
-      position: absolute;
-      inset: 0;
-
-      /* 🔵 AQUÍ CAMBIAS LA IMAGEN DE FONDO PRINCIPAL */
-      background-image: url('backgroundp.jpg');
-
-      background-size: cover;
-      background-position: center;
-      opacity: 0.35;
-      z-index: -1;
-      border-radius: 25px;
-    }
-
-    h1 {
-      font-family: 'Fredoka One', cursive;
-      font-size: 2.6rem;
-    }
-
-    .info-box {
-      background: rgba(255,255,255,0.85);
-      border: 8px solid rgba(255,255,255,0.6);
-      border-radius: 30px;
-      padding: 20px;
-      margin: 25px;
-      box-shadow: 0 6px 15px rgba(0,0,0,0.15);
-      position: relative;
-      overflow: hidden;
-      text-align: center;
-    }
-
-    /* GALERÍA */
-    .gallery {
-      margin: 40px auto;
-      max-width: 100%;
-      text-align: center;
-    }
-
-    .gallery-track {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 15px;
-    }
-
-    .gallery img {
-      width: 180px;
-      height: 180px;
-      object-fit: cover;
-      border-radius: 20px;
-      border: 6px solid rgba(255,255,255,0.7);
-      box-shadow: 0 4px 10px rgba(0,0,0,0.2);
-      cursor: pointer;
-      transition: transform .3s;
-    }
-
-    .gallery img:hover {
-      transform: scale(1.1);
-    }
-
-    /* 🔍 MODAL PARA VER FOTOS GRANDES */
-    #modal {
-      display: none;
-      position: fixed;
-      top: 0;
-      left: 0;
-      width: 100%;
-      height: 100%;
-      background: rgba(0,0,0,0.7);
-      align-items: center;
-      justify-content: center;
-      z-index: 1000;
-    }
-
-    #modal img {
-      max-width: 90%;
-      max-height: 90%;
-      border-radius: 20px;
-      box-shadow: 0 0 20px #fff;
-    }
-
-    /* OLAS AL FINAL */
-    .olas-container {
-      position: relative;
-      width: 100%;
-      height: 120px;
-      overflow: hidden;
-      margin-top: 50px;
-    }
-
-    .ola {
-      position: absolute;
-      bottom: 0;
-      width: 200%;
-      height: 100px;
-      background: rgba(255,255,255,0.55);
-      border-radius: 100%;
-      animation: moverOla 9s linear infinite;
-    }
-
-    .ola:nth-child(2) {
-      background: rgba(255,255,255,0.35);
-      height: 85px;
-      animation-duration: 13s;
-    }
-
-    @keyframes moverOla {
-      0% { transform: translateX(0); }
-      100% { transform: translateX(-50%); }
-    }
-
-    /* 🐟 PECES OPCIÓN 2 (con imágenes PNG) */
-    .pez {
-      position: fixed;
-      bottom: 40px;
-      width: 120px;
-      animation: nadar 18s linear infinite;
-      opacity: 0.85;
-    }
-
-    .pez:nth-child(odd) {
-      animation-duration: 22s;
-    }
-
-    @keyframes nadar {
-      0% { transform: translateX(-150px) scaleX(1); }
-      50% { transform: translateX(100vw) scaleX(1); }
-      51% { transform: translateX(100vw) scaleX(-1); }
-      100% { transform: translateX(-150px) scaleX(-1); }
-    }
-
+    @keyframes mar{0%{background-position:0 50%}50%{background-position:100% 50%}100%{background-position:0 50%}}
+    .hero,.info-box{border-radius:25px;position:relative;margin:20px;padding:25px;background:rgba(255,255,255,0.75);backdrop-filter:blur(3px)}
+    h1{font-family:'Fredoka One';font-size:2.4rem;text-align:center}
+    /* WAVES */
+    .waves{position:relative;height:160px;margin-top:40px;overflow:hidden}
+    .wave{position:absolute;bottom:0;width:200%;height:120px;background:rgba(255,255,255,0.55);border-radius:60%;animation:waveMove 14s linear infinite}
+    .wave:nth-child(2){opacity:.35;animation-duration:18s;height:100px}
+    @keyframes waveMove{0%{transform:translateX(0)}100%{transform:translateX(-50%)}}
+    /* BUBBLES */
+    .burbuja{position:absolute;bottom:-40px;width:14px;height:14px;border-radius:50%;background:rgba(255,255,255,0.4);animation:bubble 12s infinite}
+    @keyframes bubble{0%{transform:translateY(0);opacity:.5}100%{transform:translateY(-120vh);opacity:0}}
+    /* CSS FISH */
+    .fish{position:absolute;width:60px;height:30px;border-radius:40px;background:#ffe7a6;animation:swim 16s linear infinite}
+    .fish:before{content:"";position:absolute;right:-18px;top:6px;width:20px;height:18px;border-radius:50%;background:#ffd27a;animation:tail 1s infinite}
+    .fish:after{content:"";position:absolute;left:10px;top:8px;width:8px;height:8px;border-radius:50%;background:#333}
+    @keyframes swim{0%{transform:translateX(-120px) scaleX(1)}50%{transform:translateX(100vw) scaleX(1)}51%{transform:translateX(100vw) scaleX(-1)}100%{transform:translateX(-120px) scaleX(-1)}}
+    @keyframes tail{0%,100%{transform:rotate(18deg)}50%{transform:rotate(0)}}
+    .fish.big{width:80px;height:40px}
+    .fish.small{width:40px;height:20px}
+    /* JELLYFISH */
+    .jelly{position:absolute;width:40px;height:50px;background:#ffb5e8;border-radius:50% 50% 40% 40%;opacity:.8;animation:jellyMove 20s linear infinite}
+    .jelly:after{content:"";position:absolute;bottom:-20px;left:10px;width:20px;height:20px;border-radius:50%;background:#ff9fd9;filter:blur(2px)}
+    @keyframes jellyMove{0%{transform:translateY(0)}50%{transform:translateY(-40px)}100%{transform:translateY(0)}}
+    /* SLIDER */
+    .slider{max-width:420px;margin:40px auto;border-radius:20px;overflow:hidden}
+    .track{display:flex;width:2000%;animation:scroll 45s linear infinite}
+    @keyframes scroll{from{transform:translateX(0)}to{transform:translateX(-50%)}}
+    .slider img{width:100%;object-fit:cover}
+    #modal{display:none;position:fixed;inset:0;background:rgba(0,0,0,0.6);justify-content:center;align-items:center;z-index:999}
+    #modal img{max-width:90%;border-radius:20px}
   </style>
 </head>
-
 <body>
 
-  <!-- 🔊 MÚSICA -->
-  <audio id="bg-music" src="songta.m4a" autoplay loop></audio>
-  <button class="music-btn" id="toggleMusic">🔊</button>
+<div id="bubble-container"></div>
+<div class="fish" style="top:20%;animation-duration:18s"></div>
+<div class="fish big" style="top:55%;animation-duration:22s"></div>
+<div class="fish small" style="top:75%;animation-duration:20s"></div>
+<div class="jelly" style="top:35%;left:20%;animation-duration:26s"></div>
+<div class="jelly" style="top:60%;left:70%;animation-duration:30s"></div>
 
-  <!-- ❗ AQUÍ CAMBIAS LA IMAGEN PRINCIPAL DEL HERO -->
-  <section class="hero">
-    <h1>El Primer Año de Tahily</h1>
-    <p>¡Ven a celebrar este día tan especial con nosotros!</p>
-    <div class="contador" id="contador"></div>
-  </section>
+<audio id="bg-music" src="songta.m4a" autoplay loop></audio>
+<button id="toggleMusic" style="position:fixed;top:10px;right:10px;font-size:26px;background:none;border:none">🔊</button>
 
-  <section class="info-box">
-    <h2>📍 Dirección del Evento</h2>
-    <p>Videla 65</p>
-    <a href="https://maps.app.goo.gl/75C3GWKKCqGDRBM1A" target="_blank">👉 Ver ubicación en Google Maps</a>
-  </section>
+<section class="hero">
+  <h1>El Primer Año de Tahily</h1>
+  <p style="text-align:center">¡Ven a celebrar este día tan especial!</p>
+  <div id="contador" style="text-align:center;font-size:1.3rem;font-weight:bold"></div>
+</section>
 
-  <section class="info-box">
-    <h2>🕓 Horario</h2>
-    <p>De 17:30 hs a 20:00 hs</p>
-  </section>
+<section class="info-box">
+  <h2>📍 Dirección</h2>
+  <p>Videla 65</p>
+  <a href="https://maps.app.goo.gl/75C3GWKKCqGDRBM1A" target="_blank">Ver Ubicación</a>
+</section>
 
-  <!-- 🖼️ GALERÍA: AQUÍ CAMBIAS LAS FOTOS DE TAHILY -->
-  <section class="gallery">
-    <h2 style="font-family:'Fredoka One'; font-size:2rem;">Tahily a lo largo del año</h2>
+<section class="info-box">
+  <h2>🕓 Horario</h2>
+  <p>17:30 a 20:00 hs</p>
+</section>
 
-    <div class="gallery-track">
-      <img src="FOTO1.jpeg" alt="Tahily 1"><!-- Cambiar -->
-      <img src="FOTO2.jpeg" alt="Tahily 2"><!-- Cambiar -->
-      <img src="FOTO3.jpeg" alt="Tahily 3"><!-- Cambiar -->
-      <img src="FOTO4.jpeg" alt="Tahily 4"><!-- Cambiar -->
-      <img src="FOTO5.jpeg" alt="Tahily 5"><!-- Cambiar -->
-      <img src="FOTO6.jpeg" alt="Tahily 6"><!-- Cambiar -->
-      <img src="FOTO7.jpeg" alt="Tahily 7"><!-- Cambiar -->
-      <img src="FOTO8.jpeg" alt="Tahily 8"><!-- Cambiar -->
-      <img src="FOTO9.jpeg" alt="Tahily 9"><!-- Cambiar -->
-      <img src="FOTO10.jpeg" alt="Tahily 10">
-      <img src="FOTO11.jpeg" alt="Tahily 11">
-      <img src="FOTO12.jpeg" alt="Tahily 12">
-      <img src="FOTO13.jpeg" alt="Tahily 13">
-      <img src="FOTO14.jpeg" alt="Tahily 14">
-      <img src="FOTO15.jpeg" alt="Tahily 15">
-      <img src="FOTO16.jpeg" alt="Tahily 16">
-      <img src="FOTO17.jpeg" alt="Tahily 17">
-      <img src="FOTO18.jpeg" alt="Tahily 18">
-      <img src="FOTO19.jpeg" alt="Tahily 19">
-      <img src="FOTO20.jpeg" alt="Tahily 20"><!-- Cambiar -->
-    </div>
-  </section>
-
-  <section class="info-box">
-    <h2>📞 Confirmar Asistencia</h2>
-    <p><a href="https://wa.me/542612519528" target="_blank">WhatsApp: +54 261 251 9528</a></p>
-  </section>
-
-  <!-- OLAS ANIMADAS -->
-  <div class="olas-container">
-    <div class="ola"></div>
-    <div class="ola"></div>
+<div class="slider">
+  <div class="track">
+    <!-- Cambiar tus fotos aquí -->
+    <img src="FOTO1.jpeg">
+<img src="FOTO2.jpeg">
+<img src="FOTO3.jpeg">
+<img src="FOTO4.jpeg">
+<img src="FOTO5.jpeg">
+<img src="FOTO6.jpeg">
+<img src="FOTO7.jpeg">
+<img src="FOTO8.jpeg">
+<img src="FOTO9.jpeg">
+<img src="FOTO10.jpeg">
+<img src="FOTO11.jpeg">
+<img src="FOTO12.jpeg">
+<img src="FOTO13.jpeg">
+<img src="FOTO14.jpeg">
+<img src="FOTO15.jpeg">
+<img src="FOTO16.jpeg">
+<img src="FOTO17.jpeg">
+<img src="FOTO18.jpeg">
+<img src="FOTO19.jpeg">
+<img src="FOTO20.jpeg">
   </div>
+</div>
 
-  <!-- 🐟 PECES PNG (CAMBIAR AQUÍ TUS ARCHIVOS) -->
-  <img class="pez" src="pez1.png" style="left:10px;" />
-  <img class="pez" src="pez2.png" style="left:150px;" />
-  <img class="pez" src="pez3.png" style="left:300px;" />
+<section class="info-box">
+  <h2>📞 Confirmar Asistencia</h2>
+  <p><a href="https://wa.me/542612519528">WhatsApp</a></p>
+</section>
 
-  <!-- 🔍 MODAL PARA VER FOTOS EN GRANDE -->
-  <div id="modal" onclick="cerrarModal()">
-    <img id="modal-img">
-  </div>
+<div class="waves">
+  <div class="wave"></div>
+  <div class="wave"></div>
+</div>
 
-  <script>
-    /* ⏳ CONTADOR */
-    const fechaEvento = new Date("December 9, 2025 17:30:00").getTime();
-    setInterval(() => {
-      let diff = fechaEvento - new Date().getTime();
-      if (diff <= 0) return document.getElementById('contador').innerHTML = "¡Hoy es el gran día! 🎉";
-      let d = Math.floor(diff / (1000*60*60*24));
-      let h = Math.floor((diff % (1000*60*60*24)) / (1000*60*60));
-      let m = Math.floor((diff % (1000*60*60)) / (1000*60));
-      let s = Math.floor((diff % (1000*60)) / 1000);
-      document.getElementById('contador').innerHTML = `${d} días, ${h}h ${m}m ${s}s`;
-    }, 1000);
+<div id="modal"><img id="modal-img"></div>
 
-    /* 🎵 BOTÓN DE MÚSICA */
-    const music = document.getElementById('bg-music');
-    const toggle = document.getElementById('toggleMusic');
-    toggle.addEventListener('click', () => {
-      music.paused ? music.play() : music.pause();
-      toggle.textContent = music.paused ? '🔈' : '🔊';
-    });
-
-    /* 🔍 ABRIR FOTOS GRANDES */
-    const modal = document.getElementById('modal');
-    const modalImg = document.getElementById('modal-img');
-
-    document.querySelectorAll('.gallery img').forEach(img => {
-      img.addEventListener('click', () => {
-        modal.style.display = 'flex';
-        modalImg.src = img.src;
-      });
-    });
-
-    function cerrarModal() {
-      modal.style.display = 'none';
-    }
-  </script>
+<script>
+const cont=document.getElementById('bubble-container');
+for(let i=0;i<20;i++){
+ let b=document.createElement('div');
+ b.className='burbuja';
+ b.style.left=Math.random()*100+'vw';
+ b.style.width=b.style.height=(8+Math.random()*12)+'px';
+ b.style.animationDelay=Math.random()*8+'s';
+ cont.appendChild(b);
+}
+document.getElementById('toggleMusic').onclick=()=>{
+ let m=document.getElementById('bg-music');
+ m.paused?m.play():m.pause();
+};
+const date=new Date("December 9,2025 17:30").getTime();
+setInterval(()=>{
+ let diff=date-Date.now();
+ if(diff<=0)return contador.textContent="¡Hoy es el gran día!";
+ let d=Math.floor(diff/86400000),
+ h=Math.floor(diff%86400000/3600000),
+ m=Math.floor(diff%3600000/60000),
+ s=Math.floor(diff%60000/1000);
+ contador.textContent=`${d}d ${h}h ${m}m ${s}s`;
+},1000);
+</script>
 
 </body>
 </html>
