--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 <button id="toggleMusic" style="position:fixed;top:10px;right:10px;font-size:26px;background:none;border:none">🔊</button>
 
 <section class="hero">
-  <h1>El Primer Año de Tahily</h1>
+  <h1>Mi Primer Año: Tahily</h1>
   <p style="text-align:center">¡Ven a celebrar este día tan especial!</p>
   <div id="contador" style="text-align:center;font-size:1.3rem;font-weight:bold"></div>
 </section>
