--- a/index.html
+++ b/index.html
@@ -7,13 +7,19 @@
   <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&family=Quicksand:wght@400;600&display=swap" rel="stylesheet">
   <style>
     body{
-      margin:0;
-      font-family:'Quicksand',sans-serif;
-      background:linear-gradient(120deg,#8fd3ff,#5ebdff,#9fe0ff);
-      background-size:400% 400%;
-      animation:mar 18s infinite;
-      overflow-x:hidden;
-    }
+  margin:0;
+  font-family:'Quicksand',sans-serif;
+
+  /* 🔵 Fondo animado del mar */
+  background:linear-gradient(120deg,#8fd3ff,#5ebdff,#9fe0ff),
+              url("backgroundp.jpg");  /* ← AQUI CAMBIAS TU IMAGEN */
+  background-size:400% 400%, cover;
+  background-position:center;
+  animation:mar 18s infinite;
+
+  overflow-x:hidden;
+}
+
     @keyframes mar{0%{background-position:0 50%}50%{background-position:100% 50%}100%{background-position:0 50%}}
     .hero,.info-box{border-radius:25px;position:relative;margin:20px;padding:25px;background:rgba(255,255,255,0.75);backdrop-filter:blur(3px)}
     h1{font-family:'Fredoka One';font-size:2.4rem;text-align:center}
@@ -44,16 +50,30 @@
     .slider img{width:100%;object-fit:cover}
     #modal{display:none;position:fixed;inset:0;background:rgba(0,0,0,0.6);justify-content:center;align-items:center;z-index:999}
     #modal img{max-width:90%;border-radius:20px}
+    /* CONTENEDOR PARA PONER PECES Y BURBUJAS ENCIMA DEL CONTENIDO */
+#animaciones-top{
+  position:fixed;
+  inset:0;
+  pointer-events:none; /* Los peces no bloquean botones */
+  z-index:9999; /* ENCIMA DE TODO */
+}
+
   </style>
 </head>
 <body>
 
-<div id="bubble-container"></div>
-<div class="fish" style="top:20%;animation-duration:18s"></div>
-<div class="fish big" style="top:55%;animation-duration:22s"></div>
-<div class="fish small" style="top:75%;animation-duration:20s"></div>
-<div class="jelly" style="top:35%;left:20%;animation-duration:26s"></div>
-<div class="jelly" style="top:60%;left:70%;animation-duration:30s"></div>
+<!-- ANIMACIONES SOBRE TODO EL CONTENIDO -->
+<div id="animaciones-top">
+  <div id="bubble-container"></div>
+
+  <div class="fish" style="top:20%;animation-duration:18s"></div>
+  <div class="fish big" style="top:55%;animation-duration:22s"></div>
+  <div class="fish small" style="top:75%;animation-duration:20s"></div>
+
+  <div class="jelly" style="top:35%;left:20%;animation-duration:26s"></div>
+  <div class="jelly" style="top:60%;left:70%;animation-duration:30s"></div>
+</div>
+
 
 <audio id="bg-music" src="songta.m4a" autoplay loop></audio>
 <button id="toggleMusic" style="position:fixed;top:10px;right:10px;font-size:26px;background:none;border:none">🔊</button>
