--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&family=Quicksand:wght@400;600&display=swap" rel="stylesheet">
   <style>
     body{
+      background-image: url("backgroundp.jpg")
   margin:0;
   font-family:'Quicksand',sans-serif;
 
