--- a/index.html
+++ b/index.html
@@ -7,7 +7,12 @@
   <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&family=Quicksand:wght@400;600&display=swap" rel="stylesheet">
   <style>
     body{
-      background-image: url("backgroundp.jpg")
+
+       background-image: url("backgroundp.jpg"); /* Reemplaza con la ruta de tu imagen */
+  background-repeat: no-repeat; /* Evita que la imagen se repita */
+  background-size: cover; /* Asegura que la imagen cubra todo el fondo */
+  background-position: center; /* Centra la imagen en la pantalla */
+     
   margin:0;
   font-family:'Quicksand',sans-serif;
 
