--- a/index.html
+++ b/index.html
@@ -7,89 +7,159 @@
   <link href="https://fonts.googleapis.com/css2?family=Fredoka+One&family=Quicksand:wght@400;600&display=swap" rel="stylesheet">
   <style>
     body{
+      margin:0;
+      font-family:'Quicksand',sans-serif;
 
-margin:0;
-  font-family:'Quicksand',sans-serif;
+      /* Fondo visible SIN degradado encima */
+      background-image:url("backgroundp.jpg");
+      background-size:cover;
+      background-position:center;
+      background-repeat:no-repeat;
 
-  /* 🔵 Fondo con imagen + degradado animado encima */
-  background-image:
-      linear-gradient(120deg,#8fd3ff,#5ebdff,#9fe0ff),
-      url("backgroundp.jpg");  /* ← AQUI CAMBIAS TU IMAGEN */
-  background-size:400% 400%, cover;
-  background-position:center, center;
-  background-repeat:no-repeat;
+      /* Degradado suave como capa SEPARADA (no tapa tu imagen) */
+      position:relative;
+      overflow-x:hidden;
+    }
 
-  animation:mar 18s infinite;
-
-  overflow-x:hidden;
-}
+    /* Degradado animado flotante sin tapar imagen */
+    body:before{
+      content:"";
+      position:fixed;
+      inset:0;
+      background:linear-gradient(120deg,#8fd3ff80,#5ebdff80,#9fe0ff80);
+      background-size:400% 400%;
+      animation:mar 18s infinite;
+      z-index:0;
+      pointer-events:none;
+    }
 
     @keyframes mar{0%{background-position:0 50%}50%{background-position:100% 50%}100%{background-position:0 50%}}
-    .hero,.info-box{border-radius:25px;position:relative;margin:20px;padding:25px;background:rgba(255,255,255,0.75);backdrop-filter:blur(3px)}
+
+    /* CONTENIDO ENCIMA */
+    .hero,.info-box{
+      border-radius:25px;
+      position:relative;
+      margin:20px;
+      padding:25px;
+      background:rgba(255,255,255,0.75);
+      backdrop-filter:blur(3px);
+      z-index:2;
+    }
+
     h1{font-family:'Fredoka One';font-size:2.4rem;text-align:center}
-    /* WAVES */
-    .waves{position:relative;height:160px;margin-top:40px;overflow:hidden}
-    .wave{position:absolute;bottom:0;width:200%;height:120px;background:rgba(255,255,255,0.55);border-radius:60%;animation:waveMove 14s linear infinite}
-    .wave:nth-child(2){opacity:.35;animation-duration:18s;height:100px}
+
+    /* DOBLE CAPA DE OLAS */
+    .waves{position:relative;height:200px;margin-top:40px;overflow:hidden;z-index:2}
+
+    .wave{
+      position:absolute;
+      bottom:0;
+      width:200%;
+      height:140px;
+      background:rgba(255,255,255,0.55);
+      border-radius:60%;
+      animation:waveMove 14s linear infinite;
+    }
+
+    .wave:nth-child(2){opacity:.45;animation-duration:20s;height:160px}
+
     @keyframes waveMove{0%{transform:translateX(0)}100%{transform:translateX(-50%)}}
-    /* BUBBLES */
-    .burbuja{position:absolute;bottom:-40px;width:14px;height:14px;border-radius:50%;background:rgba(255,255,255,0.4);animation:bubble 12s infinite}
-    @keyframes bubble{0%{transform:translateY(0);opacity:.5}100%{transform:translateY(-120vh);opacity:0}}
-    /* CSS FISH */
-    .fish{position:absolute;width:60px;height:30px;border-radius:40px;background:#ffe7a6;animation:swim 16s linear infinite}
+
+    /* BURBUJAS MÁS GRANDES */
+    .burbuja{
+      position:absolute;
+      bottom:-60px;
+      width:20px;
+      height:20px;
+      border-radius:50%;
+      background:rgba(255,255,255,0.6);
+      animation:bubble 14s infinite;
+      filter:blur(1px);
+    }
+
+    @keyframes bubble{0%{transform:translateY(0);opacity:.6}100%{transform:translateY(-140vh);opacity:0}}
+
+    /* PARTICULAS DE LUZ */
+    .light{
+      position:absolute;
+      width:6px;
+      height:6px;
+      background:rgba(255,255,255,0.9);
+      border-radius:50%;
+      box-shadow:0 0 12px white;
+      animation:lightfloat 10s infinite ease-in-out;
+    }
+
+    @keyframes lightfloat{
+      0%{transform:translateY(0) scale(1)}
+      50%{transform:translateY(-80px) scale(1.4)}
+      100%{transform:translateY(0) scale(1)}
+    }
+
+    /* PECES Y MEDUSAS */
+    .fish{position:absolute;width:60px;height:30px;border-radius:40px;background:#ffe7a6;animation:swim 16s linear infinite;z-index:99999}
     .fish:before{content:"";position:absolute;right:-18px;top:6px;width:20px;height:18px;border-radius:50%;background:#ffd27a;animation:tail 1s infinite}
     .fish:after{content:"";position:absolute;left:10px;top:8px;width:8px;height:8px;border-radius:50%;background:#333}
-    @keyframes swim{0%{transform:translateX(-120px) scaleX(1)}50%{transform:translateX(100vw) scaleX(1)}51%{transform:translateX(100vw) scaleX(-1)}100%{transform:translateX(-120px) scaleX(-1)}}
+
+    @keyframes swim{
+      0%{transform:translateX(-120px) scaleX(1)}
+      50%{transform:translateX(100vw) scaleX(1)}
+      51%{transform:translateX(100vw) scaleX(-1)}
+      100%{transform:translateX(-120px) scaleX(-1)}
+    }
+
     @keyframes tail{0%,100%{transform:rotate(18deg)}50%{transform:rotate(0)}}
+
     .fish.big{width:80px;height:40px}
     .fish.small{width:40px;height:20px}
-    /* JELLYFISH */
-    .jelly{position:absolute;width:40px;height:50px;background:#ffb5e8;border-radius:50% 50% 40% 40%;opacity:.8;animation:jellyMove 20s linear infinite}
+
+    .jelly{position:absolute;width:40px;height:50px;background:#ffb5e8;border-radius:50% 50% 40% 40%;opacity:.85;animation:jellyMove 20s linear infinite;z-index:99999}
     .jelly:after{content:"";position:absolute;bottom:-20px;left:10px;width:20px;height:20px;border-radius:50%;background:#ff9fd9;filter:blur(2px)}
+
     @keyframes jellyMove{0%{transform:translateY(0)}50%{transform:translateY(-40px)}100%{transform:translateY(0)}}
-    /* SLIDER */
+
+    /* SLIDER QUE MUESTRA TODAS LAS FOTOS */
     .slider{
-  max-width:420px;
-  margin:40px auto;
-  border-radius:20px;
-  overflow:hidden;
-}
+      max-width:420px;
+      margin:40px auto;
+      border-radius:20px;
+      overflow:hidden;
+      z-index:2;
+      position:relative;
+    }
 
-.track{
-  display:flex;
-  width:2000%;               /* 20 fotos = 2000% */
-  animation:scroll 5s linear infinite;  /* Cambia el tiempo aquí */
-}
+    .track{
+      display:flex;
+      width:2000%; /* 20 fotos = 2000% */
+      animation:scroll 120s linear infinite; /* 120s para ver TODAS las fotos */
+    }
 
-@keyframes scroll{
-  from { transform:translateX(0); }
-  to   { transform:translateX(-95%); } 
-  /* -95% asegura pasar TODA LA TIRA SIN DEJAR BUCLES FEOS */
-}
+    @keyframes scroll{
+      from{transform:translateX(0)}
+      to{transform:translateX(-100%)} /* Recorre TODA la tira */
+    }
 
-.slider img{
-  width:100%;
-  object-fit:cover;
-  cursor:pointer;  /* por si quieres ampliar imágenes luego */
-}
+    .slider img{width:100%;object-fit:cover;cursor:pointer}
 
-    #modal{display:none;position:fixed;inset:0;background:rgba(0,0,0,0.6);justify-content:center;align-items:center;z-index:999}
+    #modal{display:none;position:fixed;inset:0;background:rgba(0,0,0,0.6);justify-content:center;align-items:center;z-index:999999}
     #modal img{max-width:90%;border-radius:20px}
-    /* CONTENEDOR PARA PONER PECES Y BURBUJAS ENCIMA DEL CONTENIDO */
-#animaciones-top{
-  position:fixed;
-  inset:0;
-  pointer-events:none; /* Los peces no bloquean botones */
-  z-index:9999; /* ENCIMA DE TODO */
-}
+
+    /* CONTENEDOR ANIMACIONES ENCIMA DE TODO */
+    #animaciones-top{
+      position:fixed;
+      inset:0;
+      pointer-events:none;
+      z-index:99999;
+    }
 
   </style>
 </head>
 <body>
 
-<!-- ANIMACIONES SOBRE TODO EL CONTENIDO -->
+<!-- ANIMACIONES ENCIMA -->
 <div id="animaciones-top">
   <div id="bubble-container"></div>
+  <div id="light-container"></div>
 
   <div class="fish" style="top:20%;animation-duration:18s"></div>
   <div class="fish big" style="top:55%;animation-duration:22s"></div>
@@ -99,9 +169,8 @@ margin:0;
   <div class="jelly" style="top:60%;left:70%;animation-duration:30s"></div>
 </div>
 
-
 <audio id="bg-music" src="songta.m4a" autoplay loop></audio>
-<button id="toggleMusic" style="position:fixed;top:10px;right:10px;font-size:26px;background:none;border:none">🔊</button>
+<button id="toggleMusic" style="position:fixed;top:10px;right:10px;font-size:26px;background:none;border:none;z-index:999999">🔊</button>
 
 <section class="hero">
   <h1>Mi Primer Año: Tahily</h1>
@@ -122,27 +191,26 @@ margin:0;
 
 <div class="slider">
   <div class="track">
-    <!-- Cambiar tus fotos aquí -->
     <img src="FOTO1.jpeg">
-<img src="FOTO2.jpeg">
-<img src="FOTO3.jpeg">
-<img src="FOTO4.jpeg">
-<img src="FOTO5.jpeg">
-<img src="FOTO6.jpeg">
-<img src="FOTO7.jpeg">
-<img src="FOTO8.jpeg">
-<img src="FOTO9.jpeg">
-<img src="FOTO10.jpeg">
-<img src="FOTO11.jpeg">
-<img src="FOTO12.jpeg">
-<img src="FOTO13.jpeg">
-<img src="FOTO14.jpeg">
-<img src="FOTO15.jpeg">
-<img src="FOTO16.jpeg">
-<img src="FOTO17.jpeg">
-<img src="FOTO18.jpeg">
-<img src="FOTO19.jpeg">
-<img src="FOTO20.jpeg">
+    <img src="FOTO2.jpeg">
+    <img src="FOTO3.jpeg">
+    <img src="FOTO4.jpeg">
+    <img src="FOTO5.jpeg">
+    <img src="FOTO6.jpeg">
+    <img src="FOTO7.jpeg">
+    <img src="FOTO8.jpeg">
+    <img src="FOTO9.jpeg">
+    <img src="FOTO10.jpeg">
+    <img src="FOTO11.jpeg">
+    <img src="FOTO12.jpeg">
+    <img src="FOTO13.jpeg">
+    <img src="FOTO14.jpeg">
+    <img src="FOTO15.jpeg">
+    <img src="FOTO16.jpeg">
+    <img src="FOTO17.jpeg">
+    <img src="FOTO18.jpeg">
+    <img src="FOTO19.jpeg">
+    <img src="FOTO20.jpeg">
   </div>
 </div>
 
@@ -159,30 +227,11 @@ margin:0;
 <div id="modal"><img id="modal-img"></div>
 
 <script>
+/* BURBUJAS */
 const cont=document.getElementById('bubble-container');
-for(let i=0;i<20;i++){
+for(let i=0;i<30;i++){
  let b=document.createElement('div');
  b.className='burbuja';
  b.style.left=Math.random()*100+'vw';
- b.style.width=b.style.height=(8+Math.random()*12)+'px';
- b.style.animationDelay=Math.random()*8+'s';
- cont.appendChild(b);
-}
-document.getElementById('toggleMusic').onclick=()=>{
- let m=document.getElementById('bg-music');
- m.paused?m.play():m.pause();
-};
-const date=new Date("December 9,2025 17:30").getTime();
-setInterval(()=>{
- let diff=date-Date.now();
- if(diff<=0)return contador.textContent="¡Hoy es el gran día!";
- let d=Math.floor(diff/86400000),
- h=Math.floor(diff%86400000/3600000),
- m=Math.floor(diff%3600000/60000),
- s=Math.floor(diff%60000/1000);
- contador.textContent=`${d}d ${h}h ${m}m ${s}s`;
-},1000);
-</script>
-
-</body>
-</html>
+ b.style.width=b.style.height=(14+Math.random()*20)+'px';
+ b.style.animationDuration=(10+Math.random()*10)+'s';
